<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:background="@drawable/green_grad"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:singleLine="false"
        android:minLines="1"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@+id/user_name">

        <LinearLayout
            android:id="@+id/username_info"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/green_light"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/enter_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Name"
                android:background="@android:color/transparent"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="19sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:background="@color/hint_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/username_info">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/green_light"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:background="@android:color/transparent"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="19sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/hint_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/creating_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/username_info">

            <Button
                android:id="@+id/login"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/green_grad_ovel"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/new_account_prompt"
                android:layout_gravity="center"
                android:textColor="@color/white_tinted"
                android:textSize="18sp" />

            <Button
                android:id="@+id/create_account"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/green_grad_ovel"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>